Fixed spacing of images in skills

--- a/styles.css
+++ b/styles.css
@@ -222,3 +222,11 @@ body {
   #myBtn:hover {
 	background-color: #555; /* Add a dark-grey background on hover */
   }
+
+  img.card-img-top.mx-auto.jsimage {
+	margin-top: 9px;
+  }
+
+  img.card-img-top.mx-auto.sqlimage {
+	margin-top: 9px;
+  }
